--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-nihao
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>崔浩的博客</title>
+    <link rel="stylesheet" href="./css/index.css">
+</head>
+<body>
+    <header>
+        <h1>崔浩的博客</h1>
+    </header>
+</body>
+</html>
