--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <header>
         <h1>崔浩的博客</h1>
     </header>
+    <main>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
