--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <header>
-        <h1>崔浩的博客</h1>
-    </header>
-    <main>
-    </main>
-    <footer>
-        
-    </footer>
+    <div class="index"></div>
 </body>
 </html>
