--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="index"></div>
+    <div class="container"></div>
+    <div class="mask">
+        <span class="text">
+            <h1>Welcome to my blog</h1>
+            <p>崔浩的博客</p>
+            <button>Learn More</button>
+        </span>
+    </div>
 </body>
 </html>
