--- a/main.html
+++ b/main.html
@@ -6,16 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>崔浩的博客</title>
     <link rel="stylesheet" href="./css/public.css">
-    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="container"></div>
-    <div class="mask">
-        <span class="text">
-            <h1>Welcome to my blog</h1>
-            <p>崔浩的博客</p>
-            <button>Learn More</button>
-        </span>
+    <div class="main">
+        <h1>崔浩的博客</h1>
     </div>
 </body>
 </html>
