--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span class="text">
             <h1>Welcome to my blog</h1>
             <p>崔浩的博客</p>
-            <button>Learn More</button>
+            <button><a href="https://cuihao-github.github.io/main.html">Learn More</a></button>
         </span>
     </div>
 </body>
